[package]
name = "nmd"
version = "1.4.2"
authors = ["Nicola Ricciardi"]
edition = "2021"
description = "Official NMD CLI and compiler"
readme = "README.md"
repository = "https://github.com/nricciardi/nmd"
license-file = "LICENSE"
keywords = ["compiler", "nmd", "markdown"]
exclude = [
    "test-resources/*",
    "logo/*",
    "docs/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
env_logger = "0.10.1"
getset = "0.1.2"
log = "0.4.20"
notify = "6.1.1"
once_cell = "1.19.0"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
simple_logger = "4.3.3"
thiserror = "1.0.50"
url = "2.5.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
chrono = "0.4.38"
nmd-core = "1.0.0"


[profile.profiling]
inherits = "release"
debug = true