[package]
name = "nmd-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
build_html = "2.4.0"
env_logger = "0.10.1"
log = "0.4.20"
rayon = "1.8.0"
regex = "1.10.2"
thiserror = "1.0.50"
url = "2.5.0"
