[package]
name = "nmd-compiler"
version = "0.1.0"
authors = ["Nicola Ricciardi"]
edition = "2021"
description = "Official NMD compiler"
readme = "README.md"
repository = "https://github.com/nricciardi/nmd-compiler"
license-file = "LICENSE"
keywords = ["compiler", "nmd", "markdown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
build_html = "2.4.0"
clap = "4.4.18"
env_logger = "0.10.1"
image = "0.24.8"
jpeg-encoder = "0.6.0"
log = "0.4.20"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
simple_logger = "4.3.3"
thiserror = "1.0.50"
url = "2.5.0"
